# 04_dht22_dashboard

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  PRECOMMIT_SETUP_GUIDE.md  README.MD  README_AUTO_FIX.md  activate_venv.bat  activate_venv.ps1  coverage.xml  docker-compose.yml  fix_encoding.bat  fix_powershell_activation.md  fix_precommit_bash.bat  fix_precommit_permanent.ps1  git_commit_safe.bat  pyproject.toml  quick_fix.py  quick_fix_advanced.py  requirements-dev.txt  requirements.txt  run_dashboard.bat  run_dev_server.bat  run_quality_check.bat  run_with_utf8.bat  setup_powershell_profile.ps1  setup_utf8_console.bat
.claude/: AI_CODING_GUIDELINES.md  settings.local.json
.github/workflows/: quality-security.yml
.kiro/specs/dht22-monitoring-system/: AI_CODING_GUIDELINES.md  requirements.md  updateDocs.md
.venv_broken_backup/: pyvenv.cfg
architecture/: 01_chatgpt4-0_dht22_web_dashboard_architecture.md
docs/: AI_CODING_GUIDELINES.md  CODE_QUALITY_GUIDE.md  release.md
docs/delvelopment/: 01_kiro_dht22_web_dashboard_architecture.md  02_kiro_dht22_web_dashboard_architecture.md  automation_workflow_checklist.md  automation_workflow_plan.md
logs/security/: trufflehog_report_20250814_211355.html  trufflehog_report_20250814_211410.html  trufflehog_scan_20250814_211355.json  trufflehog_scan_20250814_211410.json  trufflehog_summary_20250814_211355.txt  trufflehog_summary_20250814_211410.txt
src/arduino/dht22_sensor/: dht22_sensor.ino
src/python/dashboard/: app.py
temp/: README.md
temp/backend/: data_analyzer.py  database.py  main.py  main_backup.py  test_ai_self_phase2_3.py
tests/: test_data_processor.py  test_env_loader.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py
tools/: run_all_checks.py
tools/git_commit_check/: trufflehog_scan.py
tools/int219_to_dht22_convert/: fix_conversion_errors.py  fix_syntax_errors.py  ina219_to_dht22_converter.py  readme.md  setup_dht22_project.py
tools/metrics/: METRICS_SUMMARY.md  arduino_metrics.py  integrated_metrics.py  python_coverage.py  run_metrics.bat  run_metrics_simple.py
tools/quality/: README.md  TOOLS_OVERVIEW.md  ai_coding_error_fixer.py  arduino_check.py  auto_fix.py  auto_fix_common_issues.py  auto_test_runner.py  find_security_issues.py  fix_syntax_errors_with_autopep8_autoflake_pyupgrade.py  fix_type_hints.py  pre-commit.py  pre_commit.bat  pre_commit.py  pre_commit_checks.py  quality_check.py  quick_check.bat  quick_fix.bat  result_pre_commit.md  run_all_checks.py  run_tests.bat  safe_emoji.py  security_scan.py  setup_git_hooks.py  setup_precommit.py  smart_code_doctor.py  test_emoji_compatibility.py  unified_code_fixer.py  validate_tools.py
tools/reports/: integrated_report_20250815_092741.json  integrated_report_20250815_092819.json
tools/security/: trufflehog_check.py
(+85 files in other folders)
